--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -13,10 +13,12 @@ p:last-child {
   margin-bottom: 0;
 }
 
-ul {
+ul,
+ol,
+.simple-lightbox {
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
 }
 
 a {
