--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -26,6 +26,12 @@ a {
   text-decoration: none;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 button {
   cursor: pointer;
 }
