--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,36 +1,12 @@
 @import url('./reset.css');
 
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px transparent inset !important; /* Устанавливаем фон */
-  box-shadow: 0 0 0 30px transparent inset !important;
-  -webkit-text-fill-color: #000 !important; /* Цвет текста */
-  border-radius: 0 !important; /* Убираем скругление */
-}
-
-/* Для других браузеров */
-input:autofill,
-input:autofill:hover,
-input:autofill:focus,
-input:autofill:active {
-  -webkit-box-shadow: 0 0 0 30px transparent inset !important;
-  /* Устанавливаем фон */
-  box-shadow: 0 0 0 30px transparent inset !important;
-  -webkit-text-fill-color: #000 !important;
-  border-radius: 0 !important;
-}
-
 :root {
   font-family: Monserrat, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-
   color: #242424;
   background: #658474;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -199,10 +175,6 @@ input:autofill:active {
   height: 60px;
   margin: 50px auto;
   background-color: #2d4841;
-  -webkit-box-shadow: 10px 10px 153px 3px rgba(165, 236, 200, 1);
-  -moz-box-shadow: 10px 10px 153px 3px rgba(165, 236, 200, 1);
-  box-shadow: 10px 10px 153px 3px rgba(165, 236, 200, 1);
-
   font-size: 24px;
   color: #fff;
   display: flex;
@@ -210,6 +182,12 @@ input:autofill:active {
   align-items: center;
   border: none;
   border-radius: 4px;
+}
+
+.load-more:hover {
+  -webkit-box-shadow: 10px 10px 149px 50px rgba(165, 236, 200, 1);
+  -moz-box-shadow: 10px 10px 149px 50px rgba(165, 236, 200, 1);
+  box-shadow: 10px 10px 149px 50px rgba(165, 236, 200, 1);
 }
 
 /* ================АДАПТИВ================ */
