--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@
   color: #242424;
   background: #658474;
   font-synthesis: none;
+  margin-top: 105px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -22,12 +23,17 @@
 }
 
 .search-section {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 20px 25px 20px;
+  padding: 10px 25px 10px;
   gap: 8px;
   background-image: linear-gradient(40deg, #2d4841, #658474);
+  z-index: 1000;
 }
 
 /* SEARCH FORM */
@@ -122,8 +128,9 @@
 /* GALLERY */
 
 .gallery {
-  margin-top: 50px;
+  margin-top: 10px;
   margin-bottom: 50px;
+  min-height: 100vh;
 }
 
 .gallery-image {
@@ -173,7 +180,7 @@
 .load-more {
   width: 150px;
   height: 60px;
-  margin: 50px auto;
+  margin: 0px auto;
   background-color: #2d4841;
   font-size: 24px;
   color: #fff;
@@ -190,6 +197,14 @@
   box-shadow: 10px 10px 149px 50px rgba(165, 236, 200, 1);
 }
 
+/* ======================Footer=========================== */
+.footer {
+  background-image: linear-gradient(40deg, #2d4841, #658474);
+  color: #f0bd40;
+  margin-top: 50px;
+  text-align: center;
+}
+
 /* ================АДАПТИВ================ */
 
 @media screen and (min-width: 768px) {
@@ -199,7 +214,7 @@
 
   .search-section {
     flex-direction: row;
-    padding: 50px;
+    padding: 25px;
     align-items: center;
     justify-content: space-between;
   }
